--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- image card -->
     <div class="image-container">
       <div class="image-card">
-        <h2 id="card-title" class="title">Title of image goes here</h2>
+        <h2 id="card-title" class="title"> </h2>
         <img id="card-image" class="image" src="./assets/image-placeholder.jpg" alt="Title of image goes here too" />
         <div class="likes-section">
           <span id="like-count" class="likes">0 likes</span>
